# spec

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: zap_vs_grpc.rs
examples/rust/: main.rs
npm/: package.json
python/: pyproject.toml
python/src/zap_schema/: __init__.py  agent_consensus.py  config.py  crypto.py  gateway.py  identity.py
python/tests/: conftest.py  test_agent_consensus.py  test_client.py  test_config.py  test_crypto.py  test_gateway.py  test_identity.py  test_server.py
schema/: zap.capnp
src/: agent_consensus.rs  cap.rs  client.rs  config.rs  consensus.rs  crypto.rs  gateway.rs  identity.rs  lib.rs  schema.rs  server.rs  transport.rs  zwing.rs
src/zwing/: channel.rs  errors.rs  handshake.rs  identity.rs  kem.rs  mod.rs
tests/: cap_kat.rs  zwing_interop_go.rs
tests/testdata/: cap_go_kat.hex
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  crypto.ts  index.ts  protocol.ts  rpc.ts  server.ts  transport.ts
typescript/tests/: protocol.test.ts  rpc.test.ts  transport.test.ts
